Fixed typo: changed 'Travesty' to 'Traversy' which is the correct spelling

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -480,7 +480,7 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/EqzUcMzfV1w">Web development in 2022, a practical guide ~
-                  Travesty
+                  Traversy
                   Media</a>
               </li>
             </ul>
@@ -1171,7 +1171,7 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/bjVUqvcCnxM">Deploy websites in seconds with Netlify ~
-                  Travesty Media</a>
+                  Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
@@ -1243,7 +1243,7 @@
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/x4q86IjJFag">
-                  Chrome developer tools crash course ~ Brad Travesty
+                  Chrome developer tools crash course ~ Brad Traversy
                 </a>
                 <span class="resource-link-badge">Video</span>
               </li>
@@ -1342,7 +1342,7 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbbnEGy3ROiLWk7JMCuSyQtX">
                   Everything Vanilla JavaScript tutorials plus projects to
-                  build. ~ Travesty Media</a>
+                  build. ~ Traversy Media</a>
               </li>
             </ul>
           </div>
@@ -1545,7 +1545,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/4sosXZsdy-s">Bootstrap 5 beginner crash course. ~ Travesty
+                <a target="_blank" href="https://youtu.be/4sosXZsdy-s">Bootstrap 5 beginner crash course. ~ Traversy
                   Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
@@ -1587,7 +1587,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://www.youtube.com/watch?v=02zO0hZmwnw">Styled Components crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=02zO0hZmwnw">Styled Components crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -1609,7 +1609,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/UBOj6rqRUME">Tailwind Css crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/UBOj6rqRUME">Tailwind Css crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -1673,7 +1673,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/IiPQYQT2-wg">Bulma Css crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/IiPQYQT2-wg">Bulma Css crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -1730,7 +1730,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/nu5mdN2JIwM">Sass crash course. ~ Travesty Media
+                <a target="_blank" href="https://youtu.be/nu5mdN2JIwM">Sass crash course. ~ Traversy Media
                   >
                   <span class="resource-link-badge">Video</span>
               </li>
@@ -1755,7 +1755,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/YD91G8DdUsw">Less CSS Preprocessor for beginners. ~ Travesty
+                <a target="_blank" href="https://youtu.be/YD91G8DdUsw">Less CSS Preprocessor for beginners. ~ Traversy
                   Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
@@ -1864,7 +1864,7 @@
                   FreeCodeCamp</a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/Oive66jrwBs">Fetch API introduction. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/Oive66jrwBs">Fetch API introduction. ~ Traversy Media</a>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/mAqYJF-yxO8">Up and running JSON server. Part 1 ~ The Net
@@ -1938,7 +1938,7 @@
 
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Create your own fake rest API with JSON server. ~
-                  Travesty
+                  Traversy
                   Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
@@ -1981,7 +1981,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/w7ejDZ8SWv8">ReactJs crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/w7ejDZ8SWv8">ReactJs crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -2030,7 +2030,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/qZXt1Aom3Cs">VueJs crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/qZXt1Aom3Cs">VueJs crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -2079,7 +2079,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/3dHNOWTI7H8">Angular crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://youtu.be/3dHNOWTI7H8">Angular crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -2114,7 +2114,7 @@
                 <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://www.youtube.com/watch?v=3TVy6GdtNuQ">Svelte crash course. ~ Travesty Media</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=3TVy6GdtNuQ">Svelte crash course. ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
