--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -150,9 +150,9 @@
             </ul>
           </li>
 
-          <!-- tools and editors -->
+          <!-- editors -->
           <li class="sidebar-title">
-            <a href="#tools">Tools and Editors</a>
+            <a href="#editor">Code Editors</a>
             <ul class="sidebar-sublinks">
               <li class="sidebar-subtitle">
                 <a href="#desktop-apps">Desktop Apps</a>
@@ -555,9 +555,9 @@
         </div>
       </section>
 
-      <!--* Tools and Editors -->
-      <section id="tools" class="resource-section">
-        <h2 class="resource-section__heading">Tools and Editors</h2>
+      <!--* Code Editors -->
+      <section id="editor" class="resource-section">
+        <h2 class="resource-section__heading">Code Editors</h2>
 
         <div class="resource-section__body">
           <p>
@@ -725,8 +725,7 @@
                     <span class="resource-link-badge">Video</span>
                   </li>
                   <li class="resource-link">
-                    <a target="_blank" href="https://youtu.be/FpadVjNj37k
-">Vscode running in the browser ~ Coder Foundry</a>
+                    <a target="_blank" href="https://youtu.be/FpadVjNj37k">Vscode running in the browser ~ Coder Foundry</a>
                     <span class="resource-link-badge">Video</span>
                   </li>
                 </ul>
@@ -842,7 +841,6 @@
               <li class="resource-link">
                 <a target="_blank" href="https://www.freecodecamp.org/learn/responsive-web-design/">Responsive Website
                   Design. ~ FreeCodeCamp.</a>
-                <span class="resource-link-badge">Free</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://www.w3schools.com/html/default.asp">Learn Html. ~ W3Schools</a>
@@ -1356,11 +1354,9 @@
                   href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">JavaScript
                   Algorithms and Data Structures. ~
                   FreeCodeCamp</a>
-                <span class="resource-link-badge">Free</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://www.w3schools.com/js/default.asp">Learn JavaScript. ~ W3Schools</a>
-                <span class="resource-link-badge">Free</span>
               </li>
             </ul>
           </div>
@@ -1380,6 +1376,10 @@
           <div class="resource-card">
             <h3 class="resource-card-title">Practice Projects</h3>
             <ul class="resource-card-links">
+              <!-- <li class="resource-link">
+                <a target="_blank" href="https://javascript-project-series.vercel.app/">10+ mini projects to boost your Javascript skills. ~
+                  Timonwa</a>
+              </li> -->
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/dtKciwk_si4">10 JavaScript projects in 10 hours. Coding
                   Challenge. ~
@@ -1503,9 +1503,9 @@
         </div>
       </section>
 
-      <!--* CSS Frameworks and Libraies -->
+      <!--* CSS Frameworks and Libraries -->
       <section id="css-frameworks" class="resource-section">
-        <h2 class="resource-section__heading">CSS Frameworks and Libraies</h2>
+        <h2 class="resource-section__heading">CSS Frameworks and Libraries</h2>
 
         <div class="resource-section__body">
           <p>
@@ -1731,7 +1731,7 @@
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/nu5mdN2JIwM">Sass crash course. ~ Traversy Media
-                  >
+                </a>
                   <span class="resource-link-badge">Video</span>
               </li>
               <li class="resource-link">
@@ -1777,7 +1777,7 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/ohJcZW60br0">Learn how to power up your CSS with PostCSS. ~
                   Kevin
-                  Powell.</a>
+                  Powell</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
@@ -1927,15 +1927,18 @@
             </p>
             <ul class="resource-card-links">
               <li class="resource-link">
+                <a target="_blank" href="https://blog.bitsrc.io/6-apis-frontend-developers-should-know-3a94815c53dd">6 APIs Frontend Developers Should Know ~ A Smith</a>
+                <span class="resource-link-badge">Article</span>
+              </li>
+              <li class="resource-link">
                 <a target="_blank" href="https://jsonplaceholder.typicode.com/">JsonPlaceholder - Free fake API for testing and
                   prototyping.</a>
                 <span class="resource-link-badge">Tool</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://www.postman.com/">Postman - Postman is an API platform for building and using APIs. Postman simplifies each step of the API lifecycle and streamlines collaboration so you can create better APIs—faster.</a>
+                <a target="_blank" href="https://www.postman.com/">Postman - Postman is an API platform for building and using APIs.</a>
                 <span class="resource-link-badge">Tool</span>
               </li>
-
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Create your own fake rest API with JSON server. ~
                   Traversy
@@ -1945,10 +1948,6 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Make your own mock API. ~ Code with Abba
                   Kubow</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://blog.bitsrc.io/6-apis-frontend-developers-should-know-3a94815c53dd"></a>6 APIs Frontend Developers Should Know</a>
                 <span class="resource-link-badge">Video</span>
               </li>
             </ul>
