refactored frontend page code.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -137,15 +137,18 @@
             <a href="#roadmap">Frontend Dev. Roadmap</a>
           </li>
 
-          <!-- bootcamps and internships -->
+          <!-- networking -->
           <li class="sidebar-title">
-            <a href="#bootcamps-and-internships">Bootcamps and Internships</a>
+            <a href="#networking">Networking</a>
             <ul class="sidebar-sublinks">
+              <li class="sidebar-subtitle">
+                <a href="#communities">Tech Communities</a>
+              </li>
               <li class="sidebar-subtitle">
                 <a href="#bootcamps">Bootcamps</a>
               </li>
               <li class="sidebar-subtitle">
-                <a href="#internships">Internships</a>
+                <a href="#internships">Internship/Mentorship</a>
               </li>
             </ul>
           </li>
@@ -242,7 +245,6 @@
               <li class="sidebar-subtitle">
                 <a href="#tailwind">Tailwind</a>
               </li>
-              </li>
               <li class="sidebar-subtitle">
                 <a href="#chakra">Chakra UI</a>
               </li>
@@ -326,11 +328,6 @@
                 <a href="#others">Others</a>
               </li>
             </ul>
-          </li>
-
-          <!-- Community -->
-          <li class="sidebar-title">
-            <a href="#community">Community</a>
           </li>
 
           <!-- cheatsheet -->
@@ -488,36 +485,47 @@
         </div>
       </section>
 
-      <!--* Bootcamps and Internships -->
-      <section id="bootcamps-and-internships" class="resource-section">
-        <h2 class="resource-section__heading">Bootcamps and Internships</h2>
+      <!--* networking -->
+      <section id="networking" class="resource-section">
+        <h2 class="resource-section__heading">Networking</h2>
 
-        <div class="resource-section__body">
+        <div class="resource-section__links">
+          <!-- community -->
+          <div id="communities" class="resource-card">
+            <h3 class="resource-card-title">Tech Communities</h3>
+          <p>
+            Joining a Tech Community is the easiest way to network with and learn from other techies in the industry for free. You get to connect to other techies with different levels of expertise, network and socialize, attend tech events, ask questions and get answers from experts and professionals, share and learn from other people's experiences, etc. Below are a few of the most popular tech communities:
+          </p>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://developers.google.com/community/gdg">Google Developers Group (GDG)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href=" https://developers.google.com/community/dsc/clubs">Google Developer Student Club (DSC)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://shecodeafrica.org/">She Code Africa (SCA)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://oscafrica.org/">Open Source Community Africa (OSCA)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href=" https://devcareer.io/">Developer Career</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- bootcamps -->
+          <div id="bootcamps" class="resource-card">
+            <h3 class="resource-card-title">Bootcamps</h3>
           <p>
             Bootcamps are created to help one with little to no experience in
             coding gain programming skills by offering them technical training
             on the relevant skills. They focus on the most important aspects
             of coding while allowing one apply this new skills to solve
-            real-life problems.
+            real-life problems. They are like schools and some of them offer Certificates/Diplomas upon completion. Most of them are not free. Below are a few of the most popular bootcamps:
           </p>
-          <p>
-            Internships on the other hand are a period of work often taken to
-            gain professional learning experience relating to a field of study
-            or career interest. It can be a paid or unpaid. You can find
-            below, a list of organizations that offer coding internships and
-            run bootcamps in the tech field.
-          </p>
-        </div>
-
-        <div class="resource-section__links">
-          <!-- bootcamps -->
-          <div id="bootcamps" class="resource-card">
-            <h3 class="resource-card-title">Bootcamps</h3>
             <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://altschoolafrica.com">AltSchool Africa</a>
-                <span class="resource-link-badge">Not free</span>
-              </li>
               <li class="resource-link">
                 <a target="_blank" href="https://decagon.institute/">Decagon</a>
                 <span class="resource-link-badge">Not free</span>
@@ -526,21 +534,39 @@
                 <a target="_blank" href="https://enyata.com/academy">Enyata</a>
                 <span class="resource-link-badge">Free</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://altschoolafrica.com">AltSchool Africa</a>
+                <span class="resource-link-badge">Not free</span>
+              </li>
             </ul>
           </div>
 
-          <!-- internships -->
+          <!-- internships and mentoring -->
           <div id="internships" class="resource-card">
-            <h3 class="resource-card-title">Internships</h3>
+            <h3 class="resource-card-title">Internships and Mentoring</h3>
+          <p>
+            Internships are a period of work often taken to gain professional learning experience relating to a field of study
+            or career interest. You also get to be mentored by seniors and experts in your field from different parts of the world, sometimes even working on real-life projects. It can be a paid or unpaid. You can find
+            below, a list of organizations that offer coding internships and
+            run bootcamps in the tech field.
+          </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://twitter.com/hnginternship?t=FNo8Fg7sQj53daEh0mCuew&s=09">HNG
-                  Internship</a>
-                <span class="resource-link-badge">Unpaid</span>
+                <a target="_blank" href="https://www.outreachy.org/">Outreachy</a>
+                <span class="resource-link-badge">Paid</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://the-collab-lab.codes/">The Collab Lab</a>
+                <span class="resource-link-badge">Paid</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://internshala.com/">Internshala</a>
                 <span class="resource-link-badge">Paid</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://twitter.com/hnginternship?t=FNo8Fg7sQj53daEh0mCuew&s=09">HNG
+                  Internship</a>
+                <span class="resource-link-badge">Unpaid</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://internship.sidehustle.ng/">SideHustle.ng</a>
@@ -2344,37 +2370,6 @@
             </ul>
           </div>
         </div>
-      </section>
-
-      <!--*Community -->
-      <section id="community" class="resource-section">
-        <h2 class="resource-section__heading">Community</h2>
-
-        <div class="resource-section__body">
-          <p>
-            Connect to the web developer community, an awesome resources to 
-            ask questions and get answers from the experts and professionals.
-          </p>
-        </div>
-
-        <ul class="resource-card-links">
-          <li class="resource-link">
-            <a href="https://stackoverflow.com/">Stack Overflow</a>
-            <span class="resource-link-badge">Forum</span>
-          </li>
-        </ul>
-        <ul class="resource-card-links">
-          <li class="resource-link">
-            <a href="https://code.quora.com/">Quora</a>
-            <span class="resource-link-badge">Forum</span>
-          </li>
-        </ul>
-        <ul class="resource-card-links">
-          <li class="resource-link">
-            <a href="https://www.reddit.com/r/webdev/">Reddit</a>
-            <span class="resource-link-badge">Forum</span>
-          </li>
-        </ul>
       </section>
 
       <!--*Cheatsheets -->
