added a few links, merged the community section to the bootcamp section.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -137,22 +137,25 @@
             <a href="#roadmap">Backend Dev. Roadmap</a>
           </li>
 
-          <!-- bootcamps and internships -->
+           <!-- networking -->
           <li class="sidebar-title">
-            <a href="#bootcamps-and-internships">Bootcamps and Internships</a>
+            <a href="#networking">Networking</a>
             <ul class="sidebar-sublinks">
+              <li class="sidebar-subtitle">
+                <a href="#communities">Tech Communities</a>
+              </li>
               <li class="sidebar-subtitle">
                 <a href="#bootcamps">Bootcamps</a>
               </li>
               <li class="sidebar-subtitle">
-                <a href="#internships">Internships</a>
+                <a href="#internships">Internship/Mentorship</a>
               </li>
             </ul>
           </li>
 
-          <!-- tools and editors -->
+          <!-- code editors -->
           <li class="sidebar-title">
-            <a href="#tools">Tools and Editors</a>
+            <a href="#editor">Code Editors</a>
             <ul class="sidebar-sublinks">
               <li class="sidebar-subtitle">
                 <a href="#desktop-apps">Desktop Apps</a>
@@ -336,15 +339,10 @@
                 <a target="_blank" href="https://learntocodewith.me/posts/backend-development/">The Beginner's Guide to
                   Backend Development (2022 Guide) ~ Krystal Tolani
                 </a>
-                <span class="resource-link-badge">Article</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://www.interviewbit.com/blog/backend-developer-skills/">Backend Developer
                   Skills You Must Have - InterviewBit.com</a>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://www.freecodecamp.org/news/learn-backend-development/">The Best Way to
-                  Learn Backend Web Development - FreeCodeCamp.org</a>
               </li>
             </ul>
           </div>
@@ -354,7 +352,10 @@
             <h3 class="resource-card-title">Videos</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/cbSrsYiRamo">Backend Development explained in 2 minutes</a>
+                <a target="_blank" href="https://youtu.be/cbSrsYiRamo">Backend Development explained in 2 minutes ~ Mayuko</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/5qocqWSdpSI">Backend development explained in 10 minutes ~ Simplilearn</a>
               </li>
             </ul>
           </div>
@@ -382,13 +383,12 @@
             <h3 class="resource-card-title">Articles</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://roadmap.sh/backend">Step by step guide to becoming a modern backend
-                  developer in 2022 ~ Roadmap.sh
+                <a target="_blank" href="https://www.decipherzone.com/blog-detail/backend-developer-roadmap-2021">The 2022 RoadMap For Backend Developer ~ decipherzone.com
                 </a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://vitto.cc/backend-developer-roadmap">The Ultimate 2022 JavaScript
-                  Backend Developer Roadmap: Kickstart Your Career ~ Vittorio Rivabella
+                <a target="_blank" href="https://dev.to/creativetim_official/the-complete-roadmap-for-becoming-a-backend-developer-step-by-step-instructions-d4j">
+                  The Complete Roadmap for Becoming a Backend Developer: Step-By-Step Instructions ~ Creative Tim
                 </a>
               </li>
             </ul>
@@ -399,48 +399,57 @@
             <h3 class="resource-card-title">Videos</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://www.youtube.com/watch?v=aZkG0b6oi4s">Backend Developer Roadmap 2021 |
-                  How to Become a Backend Developer ~ codedamn</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=Q0prVO3DCtU">2022 Backend Developer Roadmap | Begin your journey as a Backend Developer ~ Coding with Lewis</a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://www.youtube.com/watch?v=Q0prVO3DCtU">2022 Backend Developer Roadmap |
-                  Begin your journey as a Backend Developer ~ Coding with Lewis</a>
+                <a target="_blank" href="https://youtu.be/-Cy-1PqrcKI">Backend Developer learning Guide Roadmap 2021 ~ AdoraHack</a>
               </li>
             </ul>
           </div>
         </div>
       </section>
 
-      <!--* Bootcamps and Internships -->
-      <section id="bootcamps-and-internships" class="resource-section">
-        <h2 class="resource-section__heading">Bootcamps and Internships</h2>
+      <!--* networking -->
+      <section id="networking" class="resource-section">
+        <h2 class="resource-section__heading">Networking</h2>
 
-        <div class="resource-section__body">
+        <div class="resource-section__links">
+          <!-- community -->
+          <div id="communities" class="resource-card">
+            <h3 class="resource-card-title">Tech Communities</h3>
+          <p>
+            Joining a Tech Community is the easiest way to network with and learn from other techies in the industry for free. You get to connect to other techies with different levels of expertise, network and socialize, attend tech events, ask questions and get answers from experts and professionals, share and learn from other people's experiences, etc. Below are a few of the most popular tech communities:
+          </p>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://developers.google.com/community/gdg">Google Developers Group (GDG)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href=" https://developers.google.com/community/dsc/clubs">Google Developer Student Club (DSC)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://shecodeafrica.org/">She Code Africa (SCA)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://oscafrica.org/">Open Source Community Africa (OSCA)</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href=" https://devcareer.io/">Developer Career</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- bootcamps -->
+          <div id="bootcamps" class="resource-card">
+            <h3 class="resource-card-title">Bootcamps</h3>
           <p>
             Bootcamps are created to help one with little to no experience in
             coding gain programming skills by offering them technical training
             on the relevant skills. They focus on the most important aspects
             of coding while allowing one apply this new skills to solve
-            real-life problems.
+            real-life problems. They are like schools and some of them offer Certificates/Diplomas upon completion. Most of them are not free. Below are a few of the most popular bootcamps:
           </p>
-          <p>
-            Internships on the other hand are a period of work often taken to
-            gain professional learning experience relating to a field of study
-            or career interest. It can be a paid or unpaid. You can find
-            below, a list of organizations that offer coding internships and
-            run bootcamps in the tech field.
-          </p>
-        </div>
-
-        <div class="resource-section__links">
-          <!-- bootcamps -->
-          <div id="bootcamps" class="resource-card">
-            <h3 class="resource-card-title">Bootcamps</h3>
             <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://altschoolafrica.com">AltSchool Africa</a>
-                <span class="resource-link-badge">Not free</span>
-              </li>
               <li class="resource-link">
                 <a target="_blank" href="https://decagon.institute/">Decagon</a>
                 <span class="resource-link-badge">Not free</span>
@@ -449,21 +458,39 @@
                 <a target="_blank" href="https://enyata.com/academy">Enyata</a>
                 <span class="resource-link-badge">Free</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://altschoolafrica.com">AltSchool Africa</a>
+                <span class="resource-link-badge">Not free</span>
+              </li>
             </ul>
           </div>
 
-          <!-- internships -->
+          <!-- internships and mentoring -->
           <div id="internships" class="resource-card">
-            <h3 class="resource-card-title">Internships</h3>
+            <h3 class="resource-card-title">Internships and Mentoring</h3>
+          <p>
+            Internships are a period of work often taken to gain professional learning experience relating to a field of study
+            or career interest. You also get to be mentored by seniors and experts in your field from different parts of the world, sometimes even working on real-life projects. It can be a paid or unpaid. You can find
+            below, a list of organizations that offer coding internships and
+            run bootcamps in the tech field.
+          </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://twitter.com/hnginternship?t=FNo8Fg7sQj53daEh0mCuew&s=09">HNG
-                  Internship</a>
-                <span class="resource-link-badge">Unpaid</span>
+                <a target="_blank" href="https://www.outreachy.org/">Outreachy</a>
+                <span class="resource-link-badge">Paid</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://the-collab-lab.codes/">The Collab Lab</a>
+                <span class="resource-link-badge">Paid</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://internshala.com/">Internshala</a>
                 <span class="resource-link-badge">Paid</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://twitter.com/hnginternship?t=FNo8Fg7sQj53daEh0mCuew&s=09">HNG
+                  Internship</a>
+                <span class="resource-link-badge">Unpaid</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://internship.sidehustle.ng/">SideHustle.ng</a>
@@ -478,9 +505,9 @@
         </div>
       </section>
 
-      <!--* Tools and Editors -->
-      <section id="tools" class="resource-section">
-        <h2 class="resource-section__heading">Tools and Editors</h2>
+      <!--* Code Editors -->
+      <section id="editor" class="resource-section">
+        <h2 class="resource-section__heading">Code Editors</h2>
 
         <div class="resource-section__body">
           <p>
@@ -582,29 +609,7 @@
           <div id="online-editors" class="resource-card">
             <h3 class="resource-card-title">Online Editors (Playgrounds)</h3>
             <ul class="resource-card-links">
-              <!-- CodeSandbox -->
-              <!-- <li class="resource-link">
-                CodeSandbox
-                <ul class="resource-link-sublinks">
-                  <li class="resource-link">
-                    <a target="_blank" href="https://codesandbox.io/">Website</a>
-                    <span class="resource-link-badge">Link</span>
-                  </li>
-                  <li class="resource-link">
-                    <a target="_blank" href="https://codesandbox.io/docs">Documentation</a>
-                    <span class="resource-link-badge">Link</span>
-                  </li>
-                  <li class="resource-link">
-                    <a target="_blank" href="https://survivejs.com/blog/codesandbox-interview/">CodeSandbox - Online
-                      react playground - Interview with
-                      Ives van Hoorne. ~ SurviveJs
-                    </a>
-                    <span class="resource-link-badge">Article</span>
-                  </li>
-                </ul>  
-              </li> -->
-
-              <!-- vscode online -->
+               <!-- vscode online -->
               <li class="resource-link">
                 VsCode Online
                 <ul class="resource-link-sublinks">
@@ -614,6 +619,24 @@
                   </li>
                   <li class="resource-link">
                     <a target="_blank" href="https://code.visualstudio.com/docs/editor/vscode-web">Documentation</a>
+                    <span class="resource-link-badge">Link</span>
+                  </li>
+                </ul>
+              </li>
+               <!-- replit  -->
+              <li class="resource-link">
+                Replit
+                <ul class="resource-link-sublinks">
+                  <li class="resource-link">
+                    <a target="_blank" href="https://repl.it">Website</a>
+                    <span class="resource-link-badge">Link</span>
+                  </li>
+                  <li class="resource-link">
+                    <a target="_blank" href="https://youtu.be/SDlrhS8O3kI">Introduction to Replit ~ Ritza</a>
+                    <span class="resource-link-badge">Link</span>
+                  </li>
+                  <li class="resource-link">
+                    <a target="_blank" href="https://youtu.be/ZAC0TQEU5gI">Getting started with Replit ~ Replit</a>
                     <span class="resource-link-badge">Link</span>
                   </li>
                 </ul>
@@ -631,6 +654,17 @@
                 <ul class="resource-link-sublinks">
                   <li class="resource-link">
                     <a target="_blank" href="https://play.google.com/store/apps/details?id=com.paprbit.dcoder">Download
+                      here</a>
+                    <span class="resource-link-badge">Link</span>
+                  </li>
+                </ul>
+              </li>
+              <!-- Code Editor -->
+              <li class="resource-link">
+                Code Editor
+                <ul class="resource-link-sublinks">
+                  <li class="resource-link">
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.rhmsoft.code">Download
                       here</a>
                     <span class="resource-link-badge">Link</span>
                   </li>
@@ -746,35 +780,6 @@
                   Powell</a>
                 <span class="resource-link-badge">Video</span>
               </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/WgZIv5HI44o">GitHub: adding an SSH key. ~ SyntaxByte</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/1vVIpIvboSg">Creating and managing a GPG key pair. ~ Nick
-                  Janetakis</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/4166ExAnxmo">Signing and verifying Git commits on the command
-                  line and
-                  GitHub. ~ Nick Janetakis</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account">Adding
-                  a new SSH key to your GitHub account ~ GitHub
-                  documentation</a>
-                <span class="resource-link-badge">Article</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://docs.github.com/en/authentication/managing-commit-signature-verification/adding-a-new-gpg-key-to-your-github-account">Adding
-                  a new GPG key to your GitHub account ~ GitHub
-                  documentation</a>
-                <span class="resource-link-badge">Article</span>
-              </li>
             </ul>
           </div>
 
@@ -809,6 +814,10 @@
               <li class="resource-link">
                 <a target="_blank" href="https://bitbucket.org/">Website</a>
                 <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/1tC6Z57AOkY">Git Crash Course using BitBucket ~AHT Cloud</a>
+                <span class="resource-link-badge">Video</span>
               </li>
             </ul>
           </div>
